integrate metadat form

--- a/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
@@ -28,12 +28,12 @@
                 <div class="form-group">
                     <label for="agency.shortName">Short Name</label>
                     <input type="text" name="agency.shortName" [(ngModel)]="metaObject.agency.shortName"
-                        [maxlength]="30" [required]="true" [disabled]="true" />
+                        [maxlength]="30" [required]="true" [disabled]="false" />
                 </div>
                 <div class="form-group">
-                    <label for="agency.fieldCenter">Short Name</label>
+                    <label for="agency.fieldCenter">Field Center</label>
                     <input type="text" name="agency.fieldCenter" [(ngModel)]="metaObject.agency.fieldCenter"
-                        [maxlength]="45" [required]="true" [disabled]="true" />
+                        [maxlength]="45" [required]="true" [disabled]="false" />
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
         </div>
 
 
-        <div class="panel panel-default">
+        <!-- <div class="panel panel-default">
             <div class="panel-heading">Project</div>
             <div class="panel-body">
                 <div class="form-group">
@@ -76,9 +76,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="panel panel-default">
+        <!-- <div class="panel panel-default">
             <div class="panel-heading">Mission</div>
             <div class="panel-body">
                 <div class="form-group">
@@ -93,10 +93,10 @@
                     </textarea>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
-        <div class="panel panel-default">
+        <!-- <div class="panel panel-default">
             <div class="panel-heading">Collect</div>
             <div class="panel-body">
                 <div class="form-group">
@@ -111,7 +111,7 @@
                     </textarea>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
         <div class="panel panel-default">
