--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -4,94 +4,103 @@
 
 <div id="app-container" class="container-fluid">
 
-  <div class="row">
-    <div class="col-md-3 lw-inner-col" id="location-explorer-list">
-        <form class="submit-form">
+    <div class="row">
+        <div class="col-md-3 lw-inner-col" id="location-explorer-list">
+            <form class="submit-form">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="location-management-widget-section">
+                            <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search"
+                                [typeaheadAsync]="true" [typeahead]="dataSource"
+                                (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10"
+                                [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
+                                [ngModelOptions]="{standalone: true}" />
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="admin" class="row">
+                    <div class="col-md-12">
+                        <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new
+                            site</button>
+                    </div>
+                </div>
+            </form>
+
+            <!-- <hr> -->
+
             <div class="row">
                 <div class="col-md-12">
-                    <div class="location-management-widget-section">
-                        <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true"
-                            [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10"
-                            [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
-                            [ngModelOptions]="{standalone: true}" />
+                    <div id="hierarchy-tree-container"
+                        class="location-management-widget-section location-management-list-container">
+                        <div *ngIf="nodes.length > 0" class="tree">
+                            <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
+                                <ng-template #treeNodeTemplate let-node let-index="index">
+                                    <span>
+                                        <i *ngIf="node.data.type === 'Site'" class="fa fa-map-marker"
+                                            style="padding-right: 2px"></i>
+                                        <i *ngIf="node.data.type === 'Project'" class="fa fa-folder"
+                                            style="padding-right: 2px"></i>
+                                        <i *ngIf="node.data.type === 'Mission'" class="fa fa-plane"
+                                            style="padding-right: 2px"></i>
+                                        <i *ngIf="node.data.type === 'Collection'" class="fa fa-image"
+                                            style="padding-right: 2px"></i>
+                                        {{ node.data.name }}
+                                    </span>
+                                </ng-template>
+                            </tree-root>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div *ngIf="admin" class="row">
-                <div class="col-md-12">
-                    <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new
-                        site</button>
+        </div>
+        <div class="col-md-9" id="site-explorer-map">
+            <div class="row">
+
+                <article class="base-layer-panel">
+                    <accordion>
+                        <accordion-group heading="Base Maps">
+                            <div class="row-form" *ngFor="let baseLayer of baseLayers">
+                                <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id'
+                                    [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
+                                <label class="layer-toggle-label">{{baseLayer.label}}</label>
+                            </div>
+                        </accordion-group>
+                    </accordion>
+                </article>
+
+                <div *ngIf="active" class="cancel-layer-panel mapboxgl-ctrl mapboxgl-ctrl-group">
+                    <button (click)="cancelDraw()" class="mapboxgl-ctrl-icon "><i
+                            class="fa fa-times-circle"></i></button>
                 </div>
-            </div>
-        </form>
 
-      <!-- <hr> -->
+                <div id="image-panel" *ngIf="showImagePanel">
+                    <div style="text-align: right;">
+                        <i class="fa fa-times btn btn-close" (click)="showImagePanel = !showImagePanel"></i>
+                    </div>
+                    <div id="image-list-container">
 
-    <div class="row">
-        <div class="col-md-12">
-            <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container">
-                <div *ngIf="nodes.length > 0" class="tree">
-                    <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
-                        <ng-template #treeNodeTemplate let-node let-index="index">
-                            <span>
-                                <i *ngIf="node.data.type === 'Site'" class="fa fa-map-marker" style="padding-right: 2px"></i>
-                                <i *ngIf="node.data.type === 'Project'" class="fa fa-folder" style="padding-right: 2px"></i>
-                                <i *ngIf="node.data.type === 'Mission'" class="fa fa-plane" style="padding-right: 2px"></i>
-                                <i *ngIf="node.data.type === 'Collection'" class="fa fa-image" style="padding-right: 2px"></i>
-                                {{ node.data.name }}
-                            </span>
-                        </ng-template>
-                    </tree-root>
+                        <ul class="media-list">
+                            <li class="media" *ngFor="let image of images" @fadeIn>
+                                <div class="media-left">
+                                    <a [routerLink]="" [contextMenu]="imageMenu" [contextMenuSubject]="image"
+                                        (click)="previewImage($event, image)">
+                                        <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml"
+                                            (error)="getDefaultImgURL($event)" alt="Image">
+                                    </a>
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">{{image.name}}</h4>
+                                    <!-- {{image.id}} -->
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+
+                <div id="map" class="map-view-port"></div>
             </div>
         </div>
     </div>
-    </div>
-    <div class="col-md-9" id="site-explorer-map">
-      <div class="row">
-
-        <article class="base-layer-panel">
-          <accordion>
-            <accordion-group heading="Base Maps">
-              <div class="row-form" *ngFor="let baseLayer of baseLayers">
-                <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id' [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
-                <label class="layer-toggle-label">{{baseLayer.label}}</label>
-              </div>        
-            </accordion-group>
-          </accordion>        
-        </article>
-
-        <div *ngIf="active" class="cancel-layer-panel mapboxgl-ctrl mapboxgl-ctrl-group">
-          <button (click)="cancelDraw()" class="mapboxgl-ctrl-icon "><i class="fa fa-times-circle"></i></button>
-        </div>
-        
-        <div id="image-panel" *ngIf="showImagePanel">
-            <div style="text-align: right;">
-                <i class="fa fa-times btn btn-close" (click)="showImagePanel = !showImagePanel"></i>
-            </div>
-            <div id="image-list-container">
-
-                <ul class="media-list">
-                    <li class="media" *ngFor="let image of images" @fadeIn>
-                        <div class="media-left">
-                            <a [routerLink]="" [contextMenu]="imageMenu" [contextMenuSubject]="image" (click)="previewImage($event, image)">
-                                <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml"
-                                (error)="getDefaultImgURL($event)" alt="Image">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">{{image.name}}</h4>
-                            <!-- {{image.id}} -->
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div id="map" class="map-view-port"></div>
-      </div>
-    </div>
-  </div>
 </div>
 
 <ng-template #bsItemTemplate let-match="match" let-query="query">
@@ -111,45 +120,51 @@
 </ng-template>
 
 <context-menu #nodeMenu>
-    <ng-template contextMenuItem let-item [visible]="canRunOrtho" (execute)="handleRunOrtho($event.item)"> <i class="fa fa-repeat"></i>
+    <ng-template contextMenuItem let-item [visible]="canRunOrtho" (execute)="handleRunOrtho($event.item)"> <i
+            class="fa fa-repeat"></i>
         Re-run Orthorectification Processing
     </ng-template>
-    <ng-template contextMenuItem let-item [visible]="canEdit" (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit
-        {{item?.data.name}} 
+    <ng-template contextMenuItem let-item [visible]="canEdit" (execute)="handleEdit($event.item)"> <i
+            class="fa fa-edit"></i> Edit
+        {{item?.data.name}}
     </ng-template>
-    <ng-template contextMenuItem let-item [visible]="canDelete" (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i>
-        Delete {{item?.data.name}} 
+    <ng-template contextMenuItem let-item [visible]="canDelete" (execute)="handleDelete($event.item)"> <i
+            class="fa fa-trash" aria-hidden="true"></i>
+        Delete {{item?.data.name}}
     </ng-template>
-    <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i>
+    <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item)"> <i
+            class="fa fa-arrow-circle-down"></i>
         Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
     <ng-template contextMenuItem [visible]="isSite" divider="true"></ng-template>
-    <ng-template contextMenuItem let-item [visible]="canEditSite" (execute)="handleEditGeom($event.item)"> <i class="fa fa-globe" aria-hidden="true"></i>
-        Edit geometry for {{item?.data.name}} 
+    <ng-template contextMenuItem let-item [visible]="canEditSite" (execute)="handleEditGeom($event.item)"> <i
+            class="fa fa-globe" aria-hidden="true"></i>
+        Edit geometry for {{item?.data.name}}
     </ng-template>
-    <ng-template contextMenuItem let-item [visible]="isSite" (execute)="zoomToFeature($event.item)"> <i class="fa fa-search-plus"></i>
+    <ng-template contextMenuItem let-item [visible]="isSite" (execute)="zoomToFeature($event.item)"> <i
+            class="fa fa-search-plus"></i>
         Zoom to feature
-    </ng-template> 
+    </ng-template>
 </context-menu>
 
 <context-menu #objectMenu>
-    <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> 
-      <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}}
+    <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)">
+        <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}}
     </ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> 
-      <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}}
+    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
+        <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}}
     </ng-template>
 </context-menu>
 
 <!-- TODO : Is this used? -->
 <context-menu #imageMenu>
-    <ng-template contextMenuItem let-item (execute)="handleImageDownload($event.item)"> 
-      <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.name}}
+    <ng-template contextMenuItem let-item (execute)="handleImageDownload($event.item)">
+        <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.name}}
     </ng-template>
 </context-menu>
 
 <context-menu #folderMenu>
-    <ng-template contextMenuItem let-item (execute)="handleDownloadAll($event.item)"> 
-      <i class="fa fa-download" aria-hidden="true"></i> Download All Files
+    <ng-template contextMenuItem let-item (execute)="handleDownloadAll($event.item)">
+        <i class="fa fa-download" aria-hidden="true"></i> Download All Files
     </ng-template>
 </context-menu>
 
