Auto-calculated image size for metadata.

--- a/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
@@ -186,12 +186,12 @@
                         </div>
                         <div class="form-group">
                             <label for="sensor.imageWidth">Image Width</label>
-                            <input type="text" name="sensor.imageWidth" [(ngModel)]="metaObject.sensor.imageWidth"
+                            <input type="text" name="sensor.imageWidth" [(ngModel)]="imageWidth"
                                 [required]="true" [disabled]="true" OnlyNumber="true" />
                         </div>
                         <div class="form-group">
                             <label for="sensor.imageHeight">Image Height</label>
-                            <input type="text" name="sensor.imageHeight" [(ngModel)]="metaObject.sensor.imageHeight"
+                            <input type="text" name="sensor.imageHeight" [(ngModel)]="imageHeight"
                                 [required]="true" [disabled]="true" OnlyNumber="true" />
                         </div>
                         <div class="form-group">
