Improvements to messages and polling tasks

--- a/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
@@ -20,7 +20,7 @@
                 </div>
 
 
-                <div class="panel panel-default">
+                <!-- <div class="panel panel-default">
                     <div class="panel-heading">Agency</div>
                     <div class="panel-body">
                         <div class="form-group">
@@ -39,7 +39,7 @@
                                 [maxlength]="45" [required]="true" [disabled]="false" />
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="panel panel-default">
@@ -184,7 +184,7 @@
                             <input type="text" name="sensor.wavelength" [(ngModel)]="metaObject.sensor.wavelength"
                                 [maxlength]="15" [required]="true" [disabled]="false" />
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="sensor.imageWidth">Image Width</label>
                             <input type="text" name="sensor.imageWidth" [(ngModel)]="imageWidth"
                                 [required]="true" [disabled]="true" OnlyNumber="true" />
@@ -193,7 +193,7 @@
                             <label for="sensor.imageHeight">Image Height</label>
                             <input type="text" name="sensor.imageHeight" [(ngModel)]="imageHeight"
                                 [required]="true" [disabled]="true" OnlyNumber="true" />
-                        </div>
+                        </div> -->
                         <div class="form-group">
                             <label for="sensor.sensorWidth">Sensor Width</label>
                             <input type="text" name="sensor.sensorWidth" [(ngModel)]="metaObject.sensor.sensorWidth"
