--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -45,10 +45,11 @@
                     </div>
                 </div> <!-- End existing task panel -->
 
-                <div *ngIf="showTaskFinishedNotification" class="panel panel-success" style="margin: 30px 0 30px 0;">
+                <!-- Task finished upload notification -->
+                <div *ngFor="let note of taskFinishedNotifications" class="panel panel-success" style="margin: 30px 0 30px 0;">
                     <div class="panel-heading" style="font-size: 20px;">
                         Upload Details
-                        <i class="fa fa-times btn btn-close pull-right" style="min-width:20px;padding:0;line-height: 27px;" (click)="showTaskFinishedNotification = false"></i>
+                        <i class="fa fa-times btn btn-close pull-right" style="min-width:20px;padding:0;line-height: 27px;" (click)="closeTaskFinishedNotification(note.id)"></i>
                     </div>
                     <div class="panel-body">
                         <h4>
@@ -60,7 +61,7 @@
                             <b> Your uploaded data is being processed into final image products. </b>
                         </h4>
                     </div>
-                </div>
+                </div> <!-- End task finished upload notification -->
 
                 <div style="margin-top: 30px;" class="" *ngIf="!disabled && !existingTask">
                     <div class="form-group">
