--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -120,8 +120,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="outFileName">Output File Name:</label>
-                        <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control" placeholder="Output File Name..." />
+                        <label for="outFileName">Output File Name Prefix:</label>
+                        <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control" placeholder="Output file name prefix..." />
                     </div>
                 </div>
 
