--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -20,8 +20,10 @@
                 </div>
                 <div *ngIf="admin" class="row">
                     <div class="col-md-12">
-                        <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new
-                            site</button>
+                        <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new site</button>
+<!-- 
+                        <button (click)="handleGoto()" class="btn btn-primary create-site-btn pull-right">View map image</button>
+ -->                        
                     </div>
                 </div>
             </form>
@@ -153,13 +155,9 @@
     <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
         <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}}
     </ng-template>
-</context-menu>
-
-<!-- TODO : Is this used? -->
-<context-menu #imageMenu>
-    <ng-template contextMenuItem let-item (execute)="handleImageDownload($event.item)">
-        <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.name}}
-    </ng-template>
+    <ng-template contextMenuItem let-item [visible]="hasMapImage" (execute)="handleMapImage($event.item)"> 
+        <i class="fa fa-search-plus"></i>Toggle on map
+    </ng-template>        
 </context-menu>
 
 <context-menu #folderMenu>
