--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -75,7 +75,7 @@
 
                 <div id="image-panel" *ngIf="showImagePanel">
                     <div style="text-align: right;">
-                        <i class="fa fa-times btn btn-close" (click)="showImagePanel = !showImagePanel"></i>
+                        <i class="fa fa-times btn btn-close" style="min-width:10px;padding:10px 10px;" (click)="showImagePanel = !showImagePanel"></i>
                     </div>
                     <div id="image-list-container">
 
