--- a/uasdm-web/src/main/webapp/net/geoprism/css/main.css
+++ b/uasdm-web/src/main/webapp/net/geoprism/css/main.css
@@ -2909,9 +2909,11 @@ input.form-control {
 input:focus,
 input.form-control:focus,
 input:active,
-input.form-control:active{
-    border-color: #007276; /* IE fallback */
-    border-color: var(--theme-input-text-border-active);
+input.form-control:active,
+.form-control:focus,
+.form-control:active{
+    border-color: #007276 !important; /* IE fallback */
+    border-color: var(--theme-input-text-border-active) !important;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(107, 165, 66,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(107, 165, 66,.6);
