integrate privilege fron/back end

--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -44,13 +44,13 @@
                                             style="padding-right: 2px"></i>
                                         <i *ngIf="node.data.type === 'Mission'" class="fa fa-plane"
                                             style="padding-right: 2px"></i>
-                                        <i *ngIf="node.data.type === 'Collection' && (admin || node.data.ownerName === userName)" class="fa fa-image"
+                                        <i *ngIf="node.data.type === 'Collection' && (admin || node.data.ownerName === userName || node.data.privilegeType === 'AGENCY' || node.data.privilegeType === 'PUBLIC')" class="fa fa-image"
                                             style="padding-right: 2px"></i>
                                         
                                         <span *ngIf="node.data.type !== 'Collection'">
                                             {{ node.data.name }}
                                         </span>
-                                        <span *ngIf="node.data.type === 'Collection' && (admin || node.data.ownerName === userName)">
+                                        <span *ngIf="node.data.type === 'Collection' && (admin || node.data.ownerName === userName || node.data.privilegeType === 'AGENCY' || node.data.privilegeType === 'PUBLIC')">
                                             {{ node.data.name }}
                                         </span>
                                     </span>
