bug fix for creating collections

--- a/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
@@ -140,6 +140,7 @@
                                 [required]="true" [disabled]="false">
                                 <option></option>
                                 <option>Fixed Wing</option>
+                                <option>Hybrid</option>
                                 <!-- <option>Natural Color (RGB)</option>
                                 <option>Multi-band (4+)</option>
                                 <option>Thermal</option> -->
