User invite feature.

--- a/uasdm-web/src/main/ng2/src/app/admin/account/accounts.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/account/accounts.component.html
@@ -8,7 +8,9 @@
         <h2>
             <localize key="accounts.title"></localize>
         </h2>
-
+        
+        <input class="btn btn-primary" type="submit" value="Invite User" (click)="inviteUsers()"> <!-- TODO : Localize -->
+        
         <div class="list-table-wrapper">
             <table id="manage-accounts-table" class="list-table table table-bordered table-striped">
                 <thead>
