--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -51,6 +51,9 @@
                                             style="padding-right: 2px;"></i>
                                         <i *ngIf="node.data.type === 'Collection' && !admin && node.data.ownerName !== userName && node.data.privilegeType === 'OWNER'" class="fa fa-image"
                                             style="padding-right: 2px; color: #999;"></i>
+
+                                        <i *ngIf="node.data.type === 'Imagery'" class="fa fa-file"
+                                            style="padding-right: 2px"></i>
                                         
                                         <span *ngIf="node.data.type !== 'Collection'">
                                             {{ node.data.name }}
@@ -75,7 +78,7 @@
 
                 <article class="base-layer-panel">
                     <accordion>
-                        <accordion-group heading="Base Maps">
+                        <accordion-group heading="Base Maps" style="border:none;">
                             <div class="row-form" *ngFor="let baseLayer of baseLayers">
                                 <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id'
                                     [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
@@ -151,16 +154,20 @@
             class="fa fa-trash" aria-hidden="true"></i>
         Delete {{item?.data.name}}
     </ng-template>
-    <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item)"> <i
+    <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item, '')"> 
+        <i class="fa fa-arrow-circle-down"></i>
+        Add a {{item?.data.childType?.toLowerCase()}} to {{item?.data.name}}
+    </ng-template> 
+    <ng-template contextMenuItem let-item [visible]="canAddChild && canCreateImageDir" (execute)="handleCreate($event.item, 'Imagery')"> <i
             class="fa fa-arrow-circle-down"></i>
-        Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} 
+        Add an image directory to {{item?.data.name}} 
     </ng-template>
 
-    <!-- <ng-template contextMenuItem [visible]="isCollection" divider="true"></ng-template>
-    <ng-template contextMenuItem let-item [visible]="isCollection" (execute)="handleUploadFile($event.item)"> 
+    <ng-template contextMenuItem [visible]="isImageDir" divider="true"></ng-template>
+    <ng-template contextMenuItem let-item [visible]="isImageDir" (execute)="handleUploadFile($event.item)"> 
         <i style="font-size:18px; padding:0; width:auto; transform: none; color: #767676;" class="fa fa-cloud-upload"></i>
         Upload a file
-    </ng-template> -->
+    </ng-template>
 
     <ng-template contextMenuItem [visible]="isSite" divider="true"></ng-template>
     <ng-template contextMenuItem let-item [visible]="canEditSite" (execute)="handleEditGeom($event.item)"> <i
