disabled direct upload on collection child nodes

--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -166,7 +166,7 @@
     <ng-template contextMenuItem [visible]="canUpload" divider="true"></ng-template>
     <ng-template contextMenuItem let-item [visible]="canUpload" (execute)="handleUploadFile($event.item)"> 
         <i style="font-size:18px; padding:0; width:auto; transform: none; color: #767676;" class="fa fa-cloud-upload"></i>
-        Upload a file
+        Upload data
     </ng-template>
 
     <ng-template contextMenuItem [visible]="isSite" divider="true"></ng-template>
